<resources>
    <string name="app_name">nbc_sns</string>
    <string name="exceed_max_available_count">최대 %d개의 이미지만 선택 가능합니다.</string>
    <string name="text_for_selected_image">%d/%d</string>
    <string name="no_image_passed_through_intent">Activity 실행에 필요한 이미지가 전달되지 않았습니다.</string>
    <string name="edit_profile_introduction">소개 문구 수정</string>
    <string name="edit_profile_introduction_done">소개 문구 수정 완료</string>
    <string name="image_permission_title">이미지 권한 안내</string>
    <string name="image_permission_message">갤러리에 있는 이미지에 접근하려면 저장소 권한이 필요합니다.</string>
    <string name="image_permission_negative">허용 안함</string>
    <string name="image_permission_positive">허용</string>
    <string name="submit_post">게시물 등록</string>
    <string name="current_index_from_all">%d / %d</string>
    <string name="post">게시물</string>
    <string name="edit_profile_thumbnail">프로필 이미지 변경</string>
    <string name="write_post">게시물 작성</string>
    <string name="no_user_id_passed_through_intent">Activity 실행에 필요한 사용자 ID가 전달되지 않았습니다.</string>
    <string name="logout">로그아웃</string>
    <string name="intro_word_edit">소개 문구 수정 완료</string>
    <string name="fail_edit_profile">프로필 수정에 실패했습니다.</string>
    <string name="post_more">더 보기</string>
    <string name="email">아이디(이메일)</string>
    <string name="unregistered_email">등록되지 않은 이메일입니다</string>
    <string name="intro_word">최고의 토론만을 펼치는 엉망잔칭 토론클럽입니다.\\n매년 엉망잔칭 토론회를 주관하고 있습니다. 최고의 토론만을 펼치는 엉망잔칭 토론클럽입니다. 매년 엉망잔칭 토론회를 주관하고 있습니다.</string>
    <string name="nickname">별명</string>
    <string name="post_content">게시물 내용</string>
    <string name="Sign_up_complete">회원가입이 완료되었습니다</string>
    <string name="user_exists">이미 존재하는 사용자입니다</string>
    <string name="select_image">이미지 선택</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="put_email">이메일을 입력해주세요.</string>
    <string name="name">이름(별명)</string>
    <string name="put_name">이름(별명)을 입력해주세요.</string>
    <string name="put_ID_email">아이디(이메일)를 입력해주세요.</string>
    <string name="password">비밀번호</string>
    <string name="re_password">비밀번호 확인</string>
    <string name="put_password">비밀번호를 입력해주세요.</string>
    <string name="put_re_password">비밀번호를 한번 더 입력해주세요.</string>
    <string name="confirm_email">아이디와 비밀번호를 확인해 주세요</string>
    <string name="login_succeed">로그인 성공</string>
    <string name="valid_email">유효한 이메일을 입력해 주세요</string>
    <string name="password_length">비밀번호는 8자 이상이어야 합니다</string>
    <string name="information">입력되지 않은 정보가 있습니다</string>
    <string name="password_match">비밀번호가 일치하지 않습니다</string>
    <string name="logo_name">INSTAR-GRAM</string>
    <string name="back">뒤로가기</string>
</resources>